# gobject-gmock-generator

./: CMakeLists.txt  README.md
cmake/: GObjectIntrospection.cmake
include/: gobject-properties-mock.h  gobject-properties-stub.h  gobject-properties.h  gobject-resource-mock.h  gobject-resource.h
include/gobject-gmock-generator/: gobject-properties-mock.h  gobject-properties-stub.h  gobject-properties.h  gobject-resource-mock.h  gobject-resource-stub.h  gobject-resource.h
samples/: CMakeLists.txt  sample-interface.c  sample-interface.h  test-sample-interface.cpp
src/: CMakeLists.txt  gobject-gmock-generator.cpp
xslt/: ggm-internal.xslt  gobject-gmock-generator.xslt
